# ada-enet

./: .gitignore  .gitmodules  Makefile  Makefile.in  README.md  alire.toml  anet_stm32f746.gpr  anet_stm32fxxx.gpr.in  configure  configure.ac  dns.gpr  dns.gpr.in  echo.gpr  echo.gpr.in  ping.gpr  ping.gpr.in  time.gpr  time.gpr.in
.github/workflows/: alire.yml
demos/dns/: dns.adb  dns_list.ads  receiver.adb  receiver.ads
demos/echo/: echo.adb  echo_server.adb  echo_server.ads  receiver.adb  receiver.ads
demos/ping/: ping.adb  pinger.adb  pinger.ads  receiver.adb  receiver.ads
demos/ping_text_io/: alire.toml  ping_text_io.gpr
demos/time/: time.adb  time_manager.adb  time_manager.ads
demos/utils/: demos.adb  demos.ads  receiver.adb  receiver.ads
drivers/enet_stm32/: .gitignore  alire.toml  enet_stm32.gpr
gnat/: enet.gpr
ping/: ping.adb  receiver.adb
src/: net-buffers.adb  net-buffers.ads  net-dhcp.adb  net-dhcp.ads  net-dns.adb  net-dns.ads  net-generic_receiver.adb  net-generic_receiver.ads  net-headers.adb  net-headers.ads  net-interfaces.adb  net-interfaces.ads  net-ntp.adb  net-ntp.ads  net-protos-arp.adb  net-protos-arp.ads  net-protos-dispatchers.adb  net-protos-dispatchers.ads  net-protos-icmp.adb  net-protos-icmp.ads  net-protos-ipv4.adb  net-protos-ipv4.ads  net-protos.ads  net-sockets-udp.adb  net-sockets-udp.ads  net-sockets.ads  net-utils.adb  net-utils.ads  net.adb  net.ads
src/stm32/: net-interfaces-stm32.adb  net-interfaces-stm32.ads  net-utils-default_random.adb  net-utils-random.adb  stm32-eth.adb  stm32-eth.ads
(+13 files in other folders)
